--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ button:hover {
 
 <div class="product">
 <div class="badge new">NEW COLLECTION</div>
-<img src="tricou-negru-model.1000008870 poze haine.jpg">
+<img src="1000008870 poze haine.jpg">
 <h3>Black Geometric Edition</h3>
 <p class="price">100 Lei</p>
 <select id="size1"><option>S</option><option>M</option><option>L</option><option>XL</option></select>
@@ -180,7 +180,7 @@ button:hover {
 
 <div class="product">
 <div class="badge best">BEST SELLER</div>
-<img src="tricou-logo.1000008872 haine 2.jpg">
+<img src="1000008872 haine 2.jpg">
 <h3>Signature JD</h3>
 <p class="price">60 Lei</p>
 <select id="size2"><option>S</option><option>M</option><option>L</option><option>XL</option></select>
@@ -190,7 +190,7 @@ button:hover {
 
 <div class="product">
 <div class="badge new">NEW COLLECTION</div>
-<img src="tricou-alb-albastru.1000008832 haine 3.jpg">
+<img src="1000008832 haine 3.jpg">
 <h3>White Blue Edition</h3>
 <p class="price">100 Lei</p>
 <select id="size3"><option>S</option><option>M</option><option>L</option><option>XL</option></select>
