--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ button:hover {
 
 </div>
 
-<a class="whatsapp-float" href="https://wa.me/407XXXXXXXX" target="_blank">
+<a class="whatsapp-float" href="https://wa.me/40733195544" target="_blank">
 WhatsApp
 </a>
 
@@ -259,7 +259,7 @@ function sendOrder() {
 
     message += "%0ATotal: " + total + " Lei";
 
-    window.open("https://wa.me/407XXXXXXXX?text=" + message);
+    window.open("https://wa.me/40733195544?text=" + message);
 }
 </script>
 
